--- a/ALFF_BASILc_REHO/R/create_barplot.Rmd
+++ b/ALFF_BASILc_REHO/R/create_barplot.Rmd
@@ -54,7 +54,7 @@ pval_size <- 5
 pval_nudge <- 0.01
 
 y_lims_age <- c(0, 0.2)
-y_lims_sex <- c(0, 0.15)
+y_lims_sex <- c(0, 0.2)
 
 age_aal <- ggplot(coupled_aal %>% filter(map_name == "global_age"), 
        aes(region, proportion)) +
@@ -122,7 +122,42 @@ sex_yeo7 <- ggplot(coupled_yeo7 %>% filter(map_name == "global_sex"),
 ```
 
 ```{r}
-ggarrange(age_aal, sex_aal, age_yeo7, sex_yeo7, nrow = 2, ncol = 2)
+age_sex_yeo <- ggarrange(age_aal, sex_aal, age_yeo7, sex_yeo7, nrow = 2, ncol = 2); age_sex_yeo
+ggsave(filename = here("output/figures/simulation/joint_barplots_norace.png"), plot = age_sex_yeo, type = "cairo-png", width = 15.083, height = 10.906, dpi = 300)
 ```
 
+```{r}
+surf_vals <- read_csv(here("output/csvs/coupling_descriptive_surf.csv"))
+surf_plot <- ggplot(surf_vals, aes(mean_surf, var_surf)) + 
+   geom_point(color = "grey69") +
+   geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey22", size = 3) +
+  labs(x = "Mean", y = "Variance") +
+   theme(panel.border = element_blank(), 
+         panel.background = element_blank(),
+         panel.grid.major.y = element_line(color = "gray85"),
+         axis.line = element_line(colour = "black"),
+         axis.text = element_text(size = axis_size),
+         axis.title = element_text(size = xy_title_size),
+         plot.title = element_text(size = title_size, hjust = 0.5)); surf_plot
+cor(surf_vals$mean_surf, surf_vals$var_surf)
+```
+
+```{r}
+health <- read_csv(here("input/csvs/demographics/healthexclude_ltn.csv"))
+rest <- read_csv(here("input/csvs/demographics/n1601_RestQAData.csv"))
+pcasl <- read_csv(here("input/csvs/demographics/n1601_PcaslQaData.csv"))
+t1 <- read_csv(here("input/csvs/demographics/n1601_t1QaData_v2.csv"))
+basil_subj <- read_table(here("input/csvs/demographics/basil_subj.txt"), col_names = FALSE)
+basil_subj$scanid <- as.numeric(basil_subj$scanid)
+binded <- read_csv(here("input/csvs/demographics/binded_demographics.csv"))
+
+total <- health %>% 
+  inner_join(rest, by = c("bblid", "scanid")) %>% 
+  inner_join(pcasl, by = c("bblid", "scanid")) %>% 
+  inner_join(t1, by = c("bblid", "scanid"))
+
+total_test <- total %>% filter(pcaslExclude == 0)
+t1_exclude <- total %>% filter(t1PostProcessExclude + fsReviewExclude >= 1)
+rest_exclude <- total %>% filter(fsFinalExclude == 0, restExcludeVoxelwise == 1)
+```
 
