--- a/ALFF_BASILc_REHO/R/simulation_interpretation-guide.Rmd
+++ b/ALFF_BASILc_REHO/R/simulation_interpretation-guide.Rmd
@@ -90,13 +90,14 @@ title_size <- 25
 axis_size <- 15
 xy_title_size <- 23
 x_lim <- c(8, 23)
+y_lim <- c(0.5, 8)
 
 alff_plot <- ggplot(voxel_vals_df, aes(age, V1)) + 
-  geom_point(colour = "grey69") + 
-  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey22", size = 3) +
+  geom_point(colour = "grey50") + 
+  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey15", size = 3) +
   labs(x = "Age", y = "ALFF") +
   scale_x_continuous(limits = x_lim) +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 1.1 * max(voxel_vals_df$V1))) + 
+  scale_y_continuous(expand = c(0, 0), limits = y_lim) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -106,11 +107,11 @@ alff_plot <- ggplot(voxel_vals_df, aes(age, V1)) +
         plot.title = element_text(size = title_size, hjust = 0.5)); alff_plot
 
 cbf_plot <- ggplot(voxel_vals_df, aes(age, V2)) + 
-  geom_point(colour = "grey69") + 
-  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey22", size = 3) +
+  geom_point(colour = "grey50") + 
+  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey15", size = 3) +
   labs(x = "Age", y = "CBF") +
   scale_x_continuous(limits = x_lim) +
-  scale_y_continuous(expand = c(0, 0), limits = c(1.3 * min(voxel_vals_df$V2), 1.1 * max(voxel_vals_df$V2))) + 
+  scale_y_continuous(expand = c(0, 0), limits = y_lim) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -120,11 +121,11 @@ cbf_plot <- ggplot(voxel_vals_df, aes(age, V2)) +
         plot.title = element_text(size = title_size, hjust = 0.5)); cbf_plot
 
 reho_plot <- ggplot(voxel_vals_df, aes(age, V3)) + 
-  geom_point(colour = "grey69") + 
-  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey22", size = 3) +
+  geom_point(colour = "grey50") + 
+  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey15", size = 3) +
   labs(x = "Age", y = "ReHo") +
   scale_x_continuous(limits = x_lim) +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 1.1 * max(voxel_vals_df$V3))) + 
+  scale_y_continuous(expand = c(0, 0), limits = y_lim) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -134,8 +135,8 @@ reho_plot <- ggplot(voxel_vals_df, aes(age, V3)) +
         plot.title = element_text(size = title_size, hjust = 0.5)); reho_plot
 
 coupling_plot <- ggplot(voxel_vals_df, aes(age, V4)) + 
-  geom_point(colour = "grey69") + 
-  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey22", size = 3) +
+  geom_point(colour = "grey50") + 
+  geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "grey15", size = 3) +
   labs(x = "Age", y = "Coupling") +
   scale_x_continuous(limits = x_lim) +
   scale_y_continuous(breaks = seq(-2, 4, 1)) + 
@@ -154,7 +155,7 @@ ggsave(filename = here("output/figures/simulation/modality_by_age.png"), plot = 
 # Pairwise modalities
 ```{r}
 alff_cbf <- ggplot(voxel_vals_df, aes(V2, V1)) + 
-  geom_point(colour = "grey69") + 
+  geom_point(colour = "grey50") + 
   geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "black") +
   labs(x = "CBF", y = "ALFF") +
   theme(panel.border = element_blank(), 
@@ -166,7 +167,7 @@ alff_cbf <- ggplot(voxel_vals_df, aes(V2, V1)) +
         plot.title = element_text(size = title_size, hjust = 0.5)); alff_cbf
 
 reho_cbf <- ggplot(voxel_vals_df, aes(V2, V3)) + 
-  geom_point(colour = "grey69") + 
+  geom_point(colour = "grey50") + 
   geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "black") +
   labs(x = "CBF", y = "ReHo") +
   theme(panel.border = element_blank(), 
@@ -178,7 +179,7 @@ reho_cbf <- ggplot(voxel_vals_df, aes(V2, V3)) +
         plot.title = element_text(size = title_size, hjust = 0.5)); reho_cbf
 
 reho_alff <- ggplot(voxel_vals_df, aes(V3, V1)) + 
-  geom_point(colour = "grey69") + 
+  geom_point(colour = "grey50") + 
   geom_smooth(method = 'lm', formula = y ~ x, se = F, colour = "black") +
   labs(x = "ReHo", y = "ALFF") +
   theme(panel.border = element_blank(), 
@@ -190,7 +191,7 @@ reho_alff <- ggplot(voxel_vals_df, aes(V3, V1)) +
         plot.title = element_text(size = title_size, hjust = 0.5)); reho_alff
 
 coupling_hist <- ggplot(voxel_vals_df, aes(V4)) +
-  geom_histogram(fill = "grey69", colour = "grey40", bins = 15) +
+  geom_histogram(fill = "grey50", colour = "grey40", bins = 15) +
   labs(x = "Coupling") +
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
@@ -273,7 +274,7 @@ eigen_center_x <- with(alff_cbf_df, weighted.mean(cbf, w = weights))
 eigen_center_y <- with(alff_cbf_df, weighted.mean(alff, w = weights))
 
 ggplot(alff_cbf_df) + 
-  geom_point(aes(cbf, alff, size = weights), colour = "grey69") + 
+  geom_point(aes(cbf, alff, size = weights), colour = "grey50") + 
   geom_abline(intercept = lm_alff_cbf[1], 
               slope = lm_alff_cbf[2], color = "#0072B2") + # alff ~ cbf
   geom_abline(intercept = - lm_cbf_alff[1] / lm_cbf_alff[2], 
@@ -311,23 +312,25 @@ wlrpca <- ggplot(alff_cbf_df) +
                    a = 5 * sqrt(eigen_val$values[1]), 
                    b = 5 * sqrt(eigen_val$values[2]), 
                    angle = atan(eigen_major)),
-               size = line_size, color = "grey22") +
-  geom_abline(intercept = eigen_center_y - eigen_major * eigen_center_x, slope = eigen_major, size = line_size, color = "grey22") + # major axis of PCA ellipse
-  geom_abline(intercept = eigen_center_y - eigen_minor * eigen_center_x, slope = eigen_minor, size = line_size, color = "grey22") + # minor axis of PCA ellipse
+               size = 1, color = "grey15") +
+  geom_abline(intercept = eigen_center_y - eigen_major * eigen_center_x, slope = eigen_major, size = line_size, color = "grey15") + # major axis of PCA ellipse
+  geom_abline(intercept = eigen_center_y - eigen_minor * eigen_center_x, slope = eigen_minor, size = 1, color = "grey15") + # minor axis of PCA ellipse
   geom_abline(intercept = lm_cbf_alff[1], 
               slope = lm_cbf_alff[2], color = "#0072B2", size = line_size) + # cbf ~ alff, blue
   geom_abline(intercept = - lm_alff_cbf[1] / lm_alff_cbf[2], 
               slope = 1 / lm_alff_cbf[2], color = "#D55E00", size = line_size) + # alff ~ cbf, red
-  geom_point(aes(alff, cbf, size = weights), colour = "grey69", show.legend = F) + 
+  geom_point(aes(alff, cbf, size = weights), colour = "grey50", show.legend = F) + 
   # annotate(geom = "text", 
   #          label = paste0("Proportional first eigenvalue: ", round(prop_eigen, 2), 
   #                         "\nCoupling value: ", round(coupling_val, 2)), 
   #          x = 5, y = 2, hjust = 0) +
   coord_fixed() +
   labs(x = "ALFF", y = "CBF") +
+  scale_x_continuous(breaks = c(0, 1, 2, 3, 4, 5, 6, 7, 8)) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
+        panel.grid.major.x = element_line(color = "gray85"),
         axis.line = element_line(colour = "black"),
         axis.text = element_text(size = axis_size),
         axis.title = element_text(size = xy_title_size),
